--- a/MidTerm/MidTerm/MidTerm.csproj
+++ b/MidTerm/MidTerm/MidTerm.csproj
@@ -230,5 +230,14 @@
   <ItemGroup>
     <None Include="Resources\36.gif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fly2.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\egg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\POSSTER.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
